bm_core_piler/gen/cminusParser.py
# Generated from cminus.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class cminusParser ( Parser ):

    grammarFileName = "cminus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'else'", "'if'", "'int'", "'return'", 
                     "'void'", "'while'", "'<='", "'>='", "'='", "'=='", 
                     "'!='", "'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "'('", 
                     "')'", "';'", "','", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "ELSE", "IF", "INT", "RETURN", "VOID", 
                      "WHILE", "LET", "GET", "ASSIGN", "EQ", "NEQ", "LT", 
                      "GT", "PLUS", "MINUS", "TIMES", "OVER", "LPAREN", 
                      "RPAREN", "SEMI", "COMMA", "LCBRACK", "RCBRACK", "LSBRACK", 
                      "RSBRACK", "ID", "NUM", "LINE_COMM", "BLOCK_COMM", 
                      "WS" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_var_decl = 2
    RULE_type_especifier = 3
    RULE_funct_decl = 4
    RULE_params = 5
    RULE_param = 6
    RULE_comp_decl = 7
    RULE_local_decl = 8
    RULE_stmt_list = 9
    RULE_stmt = 10
    RULE_exp_decl = 11
    RULE_select_decl = 12
    RULE_iter_decl = 13
    RULE_ret_decl = 14
    RULE_exp = 15
    RULE_var = 16
    RULE_simple_exp = 17
    RULE_relational = 18
    RULE_sum_exp = 19
    RULE_term = 20
    RULE_fact = 21
    RULE_activation = 22

    ruleNames =  [ "program", "decl", "var_decl", "type_especifier", "funct_decl", 
                   "params", "param", "comp_decl", "local_decl", "stmt_list", 
                   "stmt", "exp_decl", "select_decl", "iter_decl", "ret_decl", 
                   "exp", "var", "simple_exp", "relational", "sum_exp", 
                   "term", "fact", "activation" ]

    EOF = Token.EOF
    ELSE=1
    IF=2
    INT=3
    RETURN=4
    VOID=5
    WHILE=6
    LET=7
    GET=8
    ASSIGN=9
    EQ=10
    NEQ=11
    LT=12
    GT=13
    PLUS=14
    MINUS=15
    TIMES=16
    OVER=17
    LPAREN=18
    RPAREN=19
    SEMI=20
    COMMA=21
    LCBRACK=22
    RCBRACK=23
    LSBRACK=24
    RSBRACK=25
    ID=26
    NUM=27
    LINE_COMM=28
    BLOCK_COMM=29
    WS=30

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._decl = None # DeclContext
            self.list_decls = list() # of DeclContexts

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.DeclContext)
            else:
                return self.getTypedRuleContext(cminusParser.DeclContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = cminusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 46
                    localctx._decl = self.decl()
                    localctx.list_decls.append(localctx._decl) 
                self.state = 51
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 52
            localctx._decl = self.decl()
            localctx.list_decls.append(localctx._decl)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl(self):
            return self.getTypedRuleContext(cminusParser.Var_declContext,0)


        def funct_decl(self):
            return self.getTypedRuleContext(cminusParser.Funct_declContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = cminusParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 56
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.var_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.funct_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_especifier(self):
            return self.getTypedRuleContext(cminusParser.Type_especifierContext,0)


        def ID(self):
            return self.getToken(cminusParser.ID, 0)

        def SEMI(self):
            return self.getToken(cminusParser.SEMI, 0)

        def LSBRACK(self):
            return self.getToken(cminusParser.LSBRACK, 0)

        def NUM(self):
            return self.getToken(cminusParser.NUM, 0)

        def RSBRACK(self):
            return self.getToken(cminusParser.RSBRACK, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = cminusParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.type_especifier()
                self.state = 59
                self.match(cminusParser.ID)
                self.state = 60
                self.match(cminusParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.type_especifier()
                self.state = 63
                self.match(cminusParser.ID)
                self.state = 64
                self.match(cminusParser.LSBRACK)
                self.state = 65
                self.match(cminusParser.NUM)
                self.state = 66
                self.match(cminusParser.RSBRACK)
                self.state = 67
                self.match(cminusParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_especifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(cminusParser.INT, 0)

        def VOID(self):
            return self.getToken(cminusParser.VOID, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_type_especifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_especifier" ):
                listener.enterType_especifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_especifier" ):
                listener.exitType_especifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_especifier" ):
                return visitor.visitType_especifier(self)
            else:
                return visitor.visitChildren(self)




    def type_especifier(self):

        localctx = cminusParser.Type_especifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_especifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not(_la==cminusParser.INT or _la==cminusParser.VOID):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Funct_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_especifier(self):
            return self.getTypedRuleContext(cminusParser.Type_especifierContext,0)


        def ID(self):
            return self.getToken(cminusParser.ID, 0)

        def LPAREN(self):
            return self.getToken(cminusParser.LPAREN, 0)

        def params(self):
            return self.getTypedRuleContext(cminusParser.ParamsContext,0)


        def RPAREN(self):
            return self.getToken(cminusParser.RPAREN, 0)

        def comp_decl(self):
            return self.getTypedRuleContext(cminusParser.Comp_declContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_funct_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunct_decl" ):
                listener.enterFunct_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunct_decl" ):
                listener.exitFunct_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunct_decl" ):
                return visitor.visitFunct_decl(self)
            else:
                return visitor.visitChildren(self)




    def funct_decl(self):

        localctx = cminusParser.Funct_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funct_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.type_especifier()
            self.state = 74
            self.match(cminusParser.ID)
            self.state = 75
            self.match(cminusParser.LPAREN)
            self.state = 76
            self.params()
            self.state = 77
            self.match(cminusParser.RPAREN)
            self.state = 78
            self.comp_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._param = None # ParamContext
            self.params_list = list() # of ParamContexts

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(cminusParser.COMMA)
            else:
                return self.getToken(cminusParser.COMMA, i)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.ParamContext)
            else:
                return self.getTypedRuleContext(cminusParser.ParamContext,i)


        def VOID(self):
            return self.getToken(cminusParser.VOID, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = cminusParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_params)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 80
                        localctx._param = self.param()
                        localctx.params_list.append(localctx._param)
                        self.state = 81
                        self.match(cminusParser.COMMA) 
                    self.state = 87
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                self.state = 88
                localctx._param = self.param()
                localctx.params_list.append(localctx._param)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.match(cminusParser.VOID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_especifier(self):
            return self.getTypedRuleContext(cminusParser.Type_especifierContext,0)


        def ID(self):
            return self.getToken(cminusParser.ID, 0)

        def LSBRACK(self):
            return self.getToken(cminusParser.LSBRACK, 0)

        def RSBRACK(self):
            return self.getToken(cminusParser.RSBRACK, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = cminusParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.type_especifier()
                self.state = 93
                self.match(cminusParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.type_especifier()
                self.state = 96
                self.match(cminusParser.ID)
                self.state = 97
                self.match(cminusParser.LSBRACK)
                self.state = 98
                self.match(cminusParser.RSBRACK)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comp_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._local_decl = None # Local_declContext
            self.loc_decls = list() # of Local_declContexts
            self._stmt_list = None # Stmt_listContext
            self.stmts_list = list() # of Stmt_listContexts

        def LCBRACK(self):
            return self.getToken(cminusParser.LCBRACK, 0)

        def RCBRACK(self):
            return self.getToken(cminusParser.RCBRACK, 0)

        def local_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.Local_declContext)
            else:
                return self.getTypedRuleContext(cminusParser.Local_declContext,i)


        def stmt_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.Stmt_listContext)
            else:
                return self.getTypedRuleContext(cminusParser.Stmt_listContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_comp_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComp_decl" ):
                listener.enterComp_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComp_decl" ):
                listener.exitComp_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComp_decl" ):
                return visitor.visitComp_decl(self)
            else:
                return visitor.visitChildren(self)




    def comp_decl(self):

        localctx = cminusParser.Comp_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_comp_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(cminusParser.LCBRACK)
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cminusParser.INT or _la==cminusParser.VOID:
                self.state = 103
                localctx._local_decl = self.local_decl()
                localctx.loc_decls.append(localctx._local_decl)
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cminusParser.IF) | (1 << cminusParser.RETURN) | (1 << cminusParser.WHILE) | (1 << cminusParser.LPAREN) | (1 << cminusParser.SEMI) | (1 << cminusParser.LCBRACK) | (1 << cminusParser.ID) | (1 << cminusParser.NUM))) != 0):
                self.state = 109
                localctx._stmt_list = self.stmt_list()
                localctx.stmts_list.append(localctx._stmt_list)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(cminusParser.RCBRACK)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Local_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._var_decl = None # Var_declContext
            self.decl_list = list() # of Var_declContexts

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.Var_declContext)
            else:
                return self.getTypedRuleContext(cminusParser.Var_declContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_local_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocal_decl" ):
                listener.enterLocal_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocal_decl" ):
                listener.exitLocal_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal_decl" ):
                return visitor.visitLocal_decl(self)
            else:
                return visitor.visitChildren(self)




    def local_decl(self):

        localctx = cminusParser.Local_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_local_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 117
                    localctx._var_decl = self.var_decl()
                    localctx.decl_list.append(localctx._var_decl) 
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 123
            localctx._var_decl = self.var_decl()
            localctx.decl_list.append(localctx._var_decl)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._stmt = None # StmtContext
            self.stmts_list = list() # of StmtContexts

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.StmtContext)
            else:
                return self.getTypedRuleContext(cminusParser.StmtContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = cminusParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_stmt_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 125
                    localctx._stmt = self.stmt()
                    localctx.stmts_list.append(localctx._stmt) 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 131
            localctx._stmt = self.stmt()
            localctx.stmts_list.append(localctx._stmt)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp_decl(self):
            return self.getTypedRuleContext(cminusParser.Exp_declContext,0)


        def comp_decl(self):
            return self.getTypedRuleContext(cminusParser.Comp_declContext,0)


        def select_decl(self):
            return self.getTypedRuleContext(cminusParser.Select_declContext,0)


        def iter_decl(self):
            return self.getTypedRuleContext(cminusParser.Iter_declContext,0)


        def ret_decl(self):
            return self.getTypedRuleContext(cminusParser.Ret_declContext,0)


        def getRuleIndex(self):
            return cminusParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = cminusParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stmt)
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cminusParser.LPAREN, cminusParser.SEMI, cminusParser.ID, cminusParser.NUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.exp_decl()
                pass
            elif token in [cminusParser.LCBRACK]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.comp_decl()
                pass
            elif token in [cminusParser.IF]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.select_decl()
                pass
            elif token in [cminusParser.WHILE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.iter_decl()
                pass
            elif token in [cminusParser.RETURN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.ret_decl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Exp_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self):
            return self.getTypedRuleContext(cminusParser.ExpContext,0)


        def SEMI(self):
            return self.getToken(cminusParser.SEMI, 0)

        def getRuleIndex(self):
            return cminusParser.RULE_exp_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp_decl" ):
                listener.enterExp_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp_decl" ):
                listener.exitExp_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp_decl" ):
                return visitor.visitExp_decl(self)
            else:
                return visitor.visitChildren(self)




    def exp_decl(self):

        localctx = cminusParser.Exp_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_exp_decl)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [cminusParser.LPAREN, cminusParser.ID, cminusParser.NUM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.exp()
                self.state = 141
                self.match(cminusParser.SEMI)
                pass
            elif token in [cminusParser.SEMI]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(cminusParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.condition = None # ExpContext
            self._stmt = None # StmtContext
            self.if_body = list() # of StmtContexts
            self.else_body = list() # of StmtContexts

        def IF(self):
            return self.getToken(cminusParser.IF, 0)

        def LPAREN(self):
            return self.getToken(cminusParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(cminusParser.RPAREN, 0)

        def LCBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(cminusParser.LCBRACK)
            else:
                return self.getToken(cminusParser.LCBRACK, i)

        def RCBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(cminusParser.RCBRACK)
            else:
                return self.getToken(cminusParser.RCBRACK, i)

        def exp(self):
            return self.getTypedRuleContext(cminusParser.ExpContext,0)


        def ELSE(self):
            return self.getToken(cminusParser.ELSE, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cminusParser.StmtContext)
            else:
                return self.getTypedRuleContext(cminusParser.StmtContext,i)


        def getRuleIndex(self):
            return cminusParser.RULE_select_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_decl" ):
                listener.enterSelect_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_decl" ):
                listener.exitSelect_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelect_decl" ):
                return visitor.visitSelect_decl(self)
            else:
                return visitor.visitChildren(self)




    def select_decl(self):

        localctx = cminusParser.Select_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_select_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(cminusParser.IF)
            self.state = 147
            self.match(cminusParser.LPAREN)
            self.state = 148
            localctx.condition = self.exp()
            self.state = 149
            self.match(cminusParser.RPAREN)
            self.state = 150
            self.match(cminusParser.LCBRACK)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cminusParser.IF) | (1 << cminusParser.RETURN) | (1 << cminusParser.WHILE) | (1 << cminusParser.LPAREN) | (1 << cminusParser.SEMI) | (1 << cminusParser.LCBRACK) | (1 << cminusParser.ID) | (1 << cminusParser.NUM))) != 0):
                self.state = 151
                localctx._stmt = self.stmt()
                localctx.if_body.append(localctx._stmt)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
